# clash-sub-manager

./: .gitignore  README.md  config.yaml.example  main.py  providers.json  pyproject.toml
skills/: SKILL.md
